BE: add auth and checkin create

--- a/security-checkin-backend/.env.example
+++ b/security-checkin-backend/.env.example
@@ -1,3 +1,7 @@
 DATABASE_URL="mysql://root:[password]@localhost:3306/security-checkin"
 
 PORT=9000
+
+# App configure
+AUTH_SALT=15
+ACCEPT_DISTANCE=500 # meters
