--- a/.github/workflows/master_security-checkin.yml
+++ b/.github/workflows/master_security-checkin.yml
@@ -7,7 +7,6 @@ on:
   push:
     branches:
       - master
-  workflow_dispatch:
 
 jobs:
   build:
@@ -21,11 +20,12 @@ jobs:
         with:
           node-version: '18.x'
 
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+      - name: install modules, build, and test
+        run: 
+          cd ./security-checkin-backend
+          yarn
+          yarn build --if-present
+          yarn test --if-present
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
