--- a/.github/workflows/master_security-checkin.yml
+++ b/.github/workflows/master_security-checkin.yml
@@ -22,10 +22,10 @@ jobs:
 
       - name: install modules, build, and test
         run: 
-          cd ./security-checkin-backend
-          yarn
-          yarn build --if-present
-          yarn test --if-present
+          - cd ./security-checkin-backend
+          - yarn
+          - yarn build --if-present
+          - yarn test --if-present
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
