--- a/.github/workflows/master_security-checkin.yml
+++ b/.github/workflows/master_security-checkin.yml
@@ -21,11 +21,11 @@ jobs:
           node-version: '18.x'
 
       - name: install modules, build, and test
-        run: 
-          - cd ./security-checkin-backend
-          - yarn
-          - yarn build --if-present
-          - yarn test --if-present
+        run: |
+          cd ./security-checkin-backend
+          yarn
+          yarn build --if-present
+          yarn test --if-present
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
