--- a/.github/workflows/master_security-checkin.yml
+++ b/.github/workflows/master_security-checkin.yml
@@ -24,8 +24,8 @@ jobs:
         run: |
           cd ./security-checkin-backend
           yarn
-          yarn build --if-present
-          yarn test --if-present
+          yarn build
+          yarn test
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
