--- a/security-checkin-backend/package.json
+++ b/security-checkin-backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/swagger": "^7.1.13",
     "@prisma/client": "^5.4.1",
     "@types/bcryptjs": "^2.4.6",
+    "@types/multer": "^1.4.11",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.14.0",
     "reflect-metadata": "^0.1.13",
