--- a/security-checkin-frontend/package.json
+++ b/security-checkin-frontend/package.json
@@ -8,13 +8,14 @@
     "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.15.3",
     "axios": "^1.6.4",
-    "bootstrap": "4.6.0",
+    "bootstrap": "^5.3.2",
     "chartist": "0.11.4",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
     "moment": "^2.30.1",
+    "qrcode.react": "^3.1.0",
     "react": "18.2.0",
-    "react-bootstrap": "2.4.0",
+    "react-bootstrap": "^2.9.2",
     "react-chartist": "0.14.4",
     "react-dom": "18.2.0",
     "react-notification-alert": "0.0.13",
