--- a/security-checkin-frontend/package.json
+++ b/security-checkin-frontend/package.json
@@ -7,20 +7,27 @@
     "@fortawesome/fontawesome-free": "5.15.2",
     "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.15.3",
+    "@reduxjs/toolkit": "^2.0.1",
+    "antd": "^5.12.8",
     "axios": "^1.6.4",
     "bootstrap": "4.6.0",
     "chartist": "0.11.4",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "rc-resize-observer": "^1.4.0",
     "react": "18.2.0",
     "react-bootstrap": "2.4.0",
     "react-chartist": "0.14.4",
     "react-dom": "18.2.0",
     "react-notification-alert": "0.0.13",
+    "react-redux": "^9.0.4",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
+    "react-use": "^17.4.2",
+    "react-window": "^1.8.10",
     "reactstrap": "8.8.1",
     "sass": "1.53.0"
   },
