--- a/security-checkin-frontend/package.json
+++ b/security-checkin-frontend/package.json
@@ -12,12 +12,13 @@
     "axios": "^1.6.4",
     "bootstrap": "^5.3.2",
     "chartist": "0.11.4",
+    "dayjs": "^1.11.10",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
-    "rc-resize-observer": "^1.4.0",
     "qrcode.react": "^3.1.0",
+    "rc-resize-observer": "^1.4.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-chartist": "0.14.4",
